fix images on mobile, organize css

--- a/app/static/css/custom.scss
+++ b/app/static/css/custom.scss
@@ -22,11 +22,6 @@ body {
   }
 }
 
-.justify-content-center {
-  -ms-flex-pack: center !important;
-  justify-content: center !important;
-}
-
 input, textarea {
   font-size: 1.5rem;
   line-height: 2.5rem;
@@ -57,6 +52,12 @@ button {
   transition: 0.3s;
 }
 
+button:hover, input[type="submit"]:hover {
+  background-color: $hover-color;
+  border-color: $hover-color;
+  color: white;
+}
+
 button.lg {
   font-size: calc(125% + 1vw);
 }
@@ -66,34 +67,27 @@ button.lg {
   border-color: white;
 }
 
-button:hover, input[type="submit"]:hover {
-  background-color: $hover-color;
-  border-color: $hover-color;
-  color: white;
+.home-section button {
+  display: block;
+  margin: calc(3rem + 1vw) auto 0;
 }
 
-.navbar {
-  min-height: 88px;
-  background-color: white;
+#home {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/student.jpg) center top no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.navbar .container {
-  margin-top: 2rem;
+#free-trial {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/student2.jpg) center top no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.navbar-default .navbar-brand {
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 400;
-  font-size: 44px;
-}
-
-.alert {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 0;
+@media screen and (max-width: 575px) {
+  #home, #free-trial {
+    background-attachment: scroll;
+  }
 }
 
 #home-logo {
@@ -116,6 +110,19 @@ button:hover, input[type="submit"]:hover {
   font-weight: 700;
 }
 
+.alert {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+}
+
+.home-section {
+  padding-top: calc(4rem + 3vw);
+}
+
 .home-section .row {
   width: 100%;
   margin: auto;
@@ -136,28 +143,6 @@ button:hover, input[type="submit"]:hover {
   color: white;
 }
 
-#home {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/student.jpg) center top no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-.home-section {
-  padding-top: calc(4rem + 3vw);
-}
-
-#free-trial {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/student2.jpg) center top no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-@media screen and (max-width: 575px) {
-  #home-1, #home-3 {
-    background-attachment: scroll;
-  }
-}
-
 .home-section.inverse a {
   color: white;
 }
@@ -166,11 +151,6 @@ button:hover, input[type="submit"]:hover {
   font-family: $title-font;
   font-size: calc(1.75rem + 2vw);
   margin-bottom: 2rem;
-}
-
-.home-section button {
-  display: block;
-  margin: calc(3rem + 1vw) auto 0;
 }
 
 .home-next {
